# cargo-port

./: ABSOLUTE_PATH_MIGRATION_PLAN.md  CHANGELOG.md  Cargo.toml  PHASE1_PLAN.md  PLAN-progressive-detail-loading.md  PROJECT_HIERARCHY_MIGRATION.md  README.md  lints.md  taplo.toml
.claude/config/: release.toml
.github/workflows/: ci.yml
docs/: DONE - macros.md  DONE - paneid-ctx.md  DONE - toml-keys.md  app-api.md  app-pass-through-collapse.md  cargo-metadata-impl-answers.md  cargo_metadata.md  cargo_metadata_impl.md  cleanup-app-ci-methods.md  copy.md  core-api.md  design-macros.md  design-paneid-ctx.md  design-test-infra.md  disk-diagnose.md  finalize.md  fix-SIGABRT.md  hierarchy.md  macros.md  mod-split.md  module-review.md  modules.md  output-yank.md  paneid-ctx.md  phase-01-cargo-mechanics.md  phase-01-ci-tooling-DONE.md  phase-02-core-api.md  phase-02-macros.md  phase-02-paneid-ctx.md  phase-02-test-infra.md  phase-02-toml-keys.md  phase-16-significant-findings.md  pr.md  process.md  reduce-app-footprint.md  reorg.md  running_process_tree.md  shortcut-bar-keymap-renderer.md  source_modules.md  startup.md  (+12 more)
docs/as-built/: running-process-tree.md  targets-running-subpane.md
docs/style/: adding-a-keybinding.md  detail-pane-fields.md  frontend-boundaries.md  test-fixture-ownership.md  trait-tutorial-format.md  vim-mode-reserves-hjkl.md
examples/: rayon_disk_sizes.rs  tracked_row_paths.rs
scripts/: block  check-no-test-abort.sh  count_app_methods.py  repeat-phase6-nextest.sh  summarize_perf_log.py  time_bevy_exclude_toggle.sh
src/: cache_paths.rs  channel.rs  ci.rs  config.rs  constants.rs  enrichment.rs  http.rs  keymap.rs  lint_runtime.rs  list.rs  main.rs  output.rs  perf_log.rs  port_report.rs  project.rs  project_list.rs  scan.rs  sccache.rs  test_support.rs  tui.rs  watcher.rs
src/http/: auth.rs  client.rs  constants.rs  crates_io.rs  github_actions.rs  github_pull_requests.rs  mod.rs  rate_limit.rs
src/keymap/: mod.rs  parse.rs
src/lint/: cache_size_index.rs  constants.rs  history.rs  lint_runs.rs  mod.rs  paths.rs  pause.rs  read_write.rs  reclaim.rs  run.rs  runs.rs  runtime.rs  status.rs  tests.rs  trigger.rs  types.rs
src/lint/runtime/: command.rs  handle.rs  language.rs  mod.rs  request.rs  supervisor.rs
src/port_report/: history.rs  mod.rs
src/project/: cargo.rs  cargo_metadata_store.rs  constants.rs  fields.rs  git.rs  info.rs  language.rs  member_group.rs  mod.rs  non_rust.rs  package.rs  paths.rs  project_entry.rs  project_fields.rs  root_item.rs  rust_info.rs  rust_project.rs  submodule.rs  types.rs  vendored_package.rs  workspace.rs  worktree_group.rs
src/project/cargo/: cargo.rs  member_group.rs  (+8 more)
src/scan/: background.rs  cargo_metadata.rs  ci_cache.rs  constants.rs  discovery.rs  disk_usage.rs  language_stats.rs  mod.rs  test_counts.rs  tree.rs
src/themes/: appearance_poller.rs  constants.rs  mod.rs  paths.rs
src/tui/: animation.rs  app.rs  app_render_state.rs  background.rs  ci_state.rs  columns.rs  config_reload.rs  config_state.rs  constants.rs  cpu.rs  detail.rs  dismiss_target.rs  duration_fmt.rs  finder.rs  focus.rs  framework_keymap.rs  hit_test.rs  inflight.rs  input.rs  interaction.rs  keymap_state.rs  keymap_ui.rs  lint_state.rs  messages.rs  mod.rs  net_state.rs  overlays.rs  perf.rs  popup.rs  project_list.rs  project_list_state.rs  render.rs  render_context.rs  running_targets.rs  running_tracker.rs  scan.rs  scan_state.rs  selection.rs  settings.rs  shortcuts.rs  (+7 more)
src/watcher/: events.rs  mod.rs  probe.rs  refresh.rs  roots.rs  runtime.rs  tests.rs
tests/assets/: default-config.toml  default-keymap.toml
tui_pane/: CHANGELOG.md  Cargo.toml  README.md
tui_pane/docs/: modules.md
tui_pane/src/: activity.rs  app_context.rs  constants.rs  copy.rs  format.rs  input.rs  layout.rs  lib.rs  pane.rs  pane_id.rs  pane_state.rs  pane_title.rs  popup.rs  rules.rs  running_tracker.rs  settings.rs  viewport.rs  watched_file.rs
tui_pane/src/bar/: constants.rs  global_region.rs  mod.rs  nav_region.rs  palette.rs  pane_action_region.rs  region.rs  render.rs  slot.rs  status_bar.rs  status_line.rs  support.rs  tests.rs  visibility.rs
tui_pane/src/diagnostics/: constants.rs  cpu.rs  mod.rs  perf_log.rs
tui_pane/src/diagnostics/cpu/: mod.rs  monitor.rs  percent.rs  platform.rs  poller.rs  rolling_mean.rs  severity.rs  types.rs
tui_pane/src/dispatch/: hit_test.rs  input.rs  mod.rs  render.rs
tui_pane/src/framework/: dispatch.rs  focus.rs  global_action.rs  hit_test.rs  input.rs  list_navigation.rs  mod.rs  render.rs  tab_stop.rs
tui_pane/src/keymap/: action_enum.rs  bindings.rs  builder.rs  constants.rs  erased_scope.rs  global_action.rs  globals.rs  help_rows.rs  key_bind.rs  key_outcome.rs  key_sequence.rs  load.rs  mod.rs  nav_action.rs  navigation.rs  runtime_scope.rs  scope_map.rs  shortcuts.rs  vim.rs
tui_pane/src/keymap/builder/: finalize.rs  mod.rs  overlay.rs  registration.rs  tests.rs  transition.rs
tui_pane/src/layout/: column_widths.rs  mod.rs  region.rs  viewport.rs
tui_pane/src/overlays/: constants.rs  global_shortcuts.rs  keymap.rs  keymap_ui.rs  mod.rs  settings.rs
tui_pane/src/pane/: chrome.rs  constants.rs  id.rs  mod.rs  popup.rs  state.rs  title.rs
tui_pane/src/panes/: keymap.rs  keymap_pane.rs  mod.rs  settings.rs  settings_pane.rs  toasts.rs
tui_pane/src/settings_store/: constants.rs  errors.rs  mod.rs  registry.rs  row.rs  store.rs  table.rs  toast.rs
tui_pane/src/theme/: accessors.rs  builtins.rs  constants.rs  loader.rs  mod.rs  poller.rs  registry.rs  resolver.rs  runtime.rs  spec.rs  state.rs  watch.rs
tui_pane/src/toasts/: action.rs  body.rs  commands.rs  constants.rs  format.rs  ids.rs  item.rs  lifecycle.rs  manager.rs  mod.rs  navigation.rs  render.rs  running_tracker.rs  settings.rs  slots.rs  stack.rs  tests.rs  toast.rs  view.rs
tui_pane/src/toasts/render/: card.rs  drawing.rs  format.rs  layout.rs  mod.rs
tui_pane/tests/: framework_bar.rs  framework_toasts.rs  macro_use.rs  themes.rs
tui_pane/themes/: default_dark.toml  default_light.toml  high_contrast.toml
(+300 files in other folders)
