[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "A TUI for inspecting and managing Rust projects"
edition     = "2024"
homepage    = "https://github.com/natepiano/cargo-port"
keywords    = ["cargo", "inspect", "project", "rust", "tui"]
license     = "MIT OR Apache-2.0"
name        = "cargo-port"
repository  = "https://github.com/natepiano/cargo-port"
version     = "0.0.4-dev"

[dependencies]
ansi-to-tui        = "8.0.1"
cargo_metadata     = "0.23.1"
chrono             = "0.4.44"
clap               = { version = "4", features = ["derive"] }
colored            = "3.1.1"
comfy-table        = { version = "7", features = ["custom_styling"] }
confique           = { version = "0.4", features = ["toml"] }
crossterm          = "0.29.0"
dirs               = "6.0.0"
indexmap           = "2"
notify             = "9.0.0-rc.2"
nucleo-matcher     = "0.3.1"
ratatui            = "0.30.0"
rayon              = "1.12.0"
reqwest            = { version = "0.13.2", features = ["json"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sha2               = "0.11.0"
strum              = { version = "0.28.0", features = ["derive"] }
sysinfo            = "0.38.4"
tokei              = "14.0.0"
tokio              = { version = "1", features = ["rt-multi-thread"] }
toml               = "1.1.2"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width      = "0.2.2"
walkdir            = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Our strict lints — test modules use:
#   #[allow(clippy::expect_used, reason = "tests should panic on unexpected values")]
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
self_named_module_files         = "deny" # use module/mod.rs (directory form) when a module has submodules
panic                           = "deny"
unreachable                     = "deny"
unwrap_used                     = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with common patterns
multiple_crate_versions = "allow"
redundant_pub_crate     = "allow"

[lints.rust]
missing_docs = "deny"
