[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "A TUI for inspecting and managing Rust projects"
edition     = "2024"
homepage    = "https://github.com/natepiano/cargo-port"
keywords    = ["cargo", "inspect", "project", "rust", "tui"]
license     = "MIT OR Apache-2.0"
name        = "cargo-port"
repository  = "https://github.com/natepiano/cargo-port"
version     = "0.0.4-dev"

[workspace]
members  = ["tui_pane"]
resolver = "3"

[dependencies]
ansi-to-tui        = "8.0.1"
anyhow             = "1"
cargo_metadata     = "0.23.1"
chrono             = "0.4.44"
clap               = { version = "4", features = ["derive"] }
colored            = "3.1.1"
comfy-table        = { version = "7", features = ["custom_styling"] }
confique           = { version = "0.4", features = ["toml"] }
crossterm          = "0.29.0"
dirs               = "6.0.0"
indexmap           = "2"
notify             = "9.0.0-rc.2"
nucleo-matcher     = "0.3.1"
ratatui            = "0.30.0"
rayon              = "1.12.0"
reqwest            = { version = "0.13.3", features = ["json"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sha2               = "0.11.0"
strum              = { version = "0.28.0", features = ["derive"] }
sysinfo            = "0.38.4"
tokei              = "14.0.0"
tokio              = { version = "1", features = ["rt-multi-thread"] }
toml               = "1.1.2"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width      = "0.2.2"
walkdir            = "2"

# tui_pane re-exports KeyBind / Keymap / etc. used by the binary.
tui_pane = { path = "tui_pane", version = "0.0.4-dev" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[workspace.lints.clippy]
# Strict per-rule denies. Test modules opt back in via:
#   #[allow(clippy::expect_used, reason = "tests should panic on unexpected values")]
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
self_named_module_files         = "deny" # use module/mod.rs (directory form) when a module has submodules
unreachable                     = "deny"
unwrap_used                     = "deny"

# Lint groups as deny with lower priority so per-rule allows below override.
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Conflicts with common patterns.
multiple_crate_versions = "allow"
redundant_pub_crate     = "allow"

[workspace.lints.rust]
missing_docs = "deny"
