[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "A TUI for inspecting and managing Rust projects"
edition     = "2024"
# README screenshots live on GitHub; crates.io rewrites the relative image
# links against `repository`, so the crate itself doesn't need to ship them.
exclude    = ["assets/"]
homepage   = "https://github.com/natepiano/cargo-port"
keywords   = ["cargo", "inspect", "project", "rust", "tui"]
license    = "MIT OR Apache-2.0"
name       = "cargo-port"
repository = "https://github.com/natepiano/cargo-port"
version    = "0.2.0"

[workspace]
members  = ["tui_pane"]
resolver = "3"

[workspace.dependencies]
ansi-to-tui           = "8.0.1"
anyhow                = "1"
cargo_metadata        = "0.23.1"
chrono                = "0.4.45"
confique              = "0.4"
crossbeam-channel     = "0.5"
crossterm             = "0.29.0"
dark-light            = "2"
dirs                  = "6.0.0"
ignore                = "0.4"
indexmap              = "2"
itertools             = "0.14"
notify                = "9.0.0-rc.2"
nucleo-matcher        = "0.3.1"
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-io-kit          = { version = "0.3.2", default-features = false }
pulldown-cmark        = { version = "0.13.4", default-features = false }
ratatui               = "0.30.1"
rayon                 = "1.12.0"
reqwest               = "0.13.4"
serde                 = "1"
serde_json            = "1"
sha2                  = "0.11.0"
strum                 = "0.28.0"
sysinfo               = "0.39.3"
tempfile              = "3"
terminal-colorsaurus  = "1.0.3"
thiserror             = "2"
tokei                 = "14.0.0"
tokio                 = "1"
toml                  = "1.1.2"
tracing               = "0.1.44"
tracing-subscriber    = "0.3"
tui_pane              = { path = "tui_pane", version = "0.2.0" }
unicode-width         = "0.2.2"
walkdir               = "2"

[dependencies]
ansi-to-tui          = { workspace = true }
anyhow               = { workspace = true }
cargo_metadata       = { workspace = true }
chrono               = { workspace = true }
confique             = { workspace = true, features = ["toml"] }
crossbeam-channel    = { workspace = true }
crossterm            = { workspace = true }
dirs                 = { workspace = true }
ignore               = { workspace = true }
indexmap             = { workspace = true }
itertools            = { workspace = true }
notify               = { workspace = true }
nucleo-matcher       = { workspace = true }
pulldown-cmark       = { workspace = true }
ratatui              = { workspace = true }
rayon                = { workspace = true }
reqwest              = { workspace = true, features = ["json"] }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
sha2                 = { workspace = true }
strum                = { workspace = true, features = ["derive"] }
sysinfo              = { workspace = true }
terminal-colorsaurus = { workspace = true }
tokei                = { workspace = true }
tokio                = { workspace = true, features = ["rt-multi-thread"] }
toml                 = { workspace = true }
tracing              = { workspace = true }
unicode-width        = { workspace = true }
walkdir              = { workspace = true }

# tui_pane provides the framework used by the binary.
tui_pane = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[workspace.lints.clippy]
# Strict per-rule denies. Test modules opt back in via:
#   #[allow(clippy::expect_used, reason = "tests should panic on unexpected values")]
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
self_named_module_files         = "deny" # use module/mod.rs (directory form) when a module has submodules
undocumented_unsafe_blocks      = "deny" # every unsafe block carries a `// SAFETY:` justification
unreachable                     = "deny"
unwrap_used                     = "deny"

# Lint groups as deny with lower priority so per-rule allows below override.
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Conflicts with common patterns.
multiple_crate_versions = "allow"
redundant_pub_crate     = "allow"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code  = "deny" # FFI-only; opt back in per item with a reasoned allow
