[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "Reusable ratatui pane framework: keymap, status bar, framework panes."
edition     = "2024"
keywords    = ["keymap", "pane", "ratatui", "tui"]
license     = "MIT OR Apache-2.0"
name        = "tui_pane"
readme      = "README.md"
repository  = "https://github.com/natepiano/cargo-port"
version     = "0.0.4-dev"

[lints]
workspace = true

[features]
clipboard = ["crossterm/osc52"]
default   = ["clipboard"]

[dependencies]
crossterm     = "0.29.0"
dark-light    = "2"
dirs          = "6.0.0"
ratatui       = "0.30.0"
serde         = { version = "1", features = ["derive"] }
thiserror     = "2"
tokio         = { version = "1", features = ["macros", "rt", "time"] }
toml          = "1.1.2"
tracing       = "0.1"
unicode-width = "0.2.2"

[dev-dependencies]
# none in Phase 1; later phases add only std + the crate's own types.
