[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "Reusable ratatui pane framework: keymap, status bar, framework panes."
edition     = "2024"
keywords    = ["keymap", "pane", "ratatui", "tui"]
license     = "MIT OR Apache-2.0"
name        = "tui_pane"
readme      = "README.md"
repository  = "https://github.com/natepiano/cargo-port"
version     = "0.0.4-dev"

[lints]
workspace = true

[features]
clipboard = ["crossterm/osc52"]
default   = ["clipboard"]

[dependencies]
crossbeam-channel  = "0.5"
crossterm          = "0.29.0"
dark-light         = "2"
dirs               = "6.0.0"
ratatui            = "0.30.0"
serde              = { version = "1", features = ["derive"] }
sysinfo            = "0.38.4"
thiserror          = "2"
tokio              = { version = "1", features = ["macros", "rt", "time"] }
toml               = "1.1.2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width      = "0.2.2"

# Already in the tree via sysinfo with these exact features, so the direct
# dependency adds no compile units; used for the IOKit GPU sampler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { workspace = true, features = [
  "CFBase",
  "CFDictionary",
  "CFNumber",
  "CFString",
  "std",
] }
objc2-io-kit = { workspace = true, features = ["libc", "std"] }

[dev-dependencies]
# none in Phase 1; later phases add only std + the crate's own types.
