[package]
authors     = ["natepiano"]
categories  = ["command-line-utilities", "development-tools"]
description = "Reusable ratatui pane framework: keymap, status bar, framework panes."
edition     = "2024"
keywords    = ["keymap", "pane", "ratatui", "tui"]
license     = "MIT OR Apache-2.0"
name        = "tui_pane"
readme      = "README.md"
repository  = "https://github.com/natepiano/cargo-port"
version     = "0.1.5"

[lints]
workspace = true

[features]
clipboard = ["crossterm/osc52"]
default   = ["clipboard"]

[dependencies]
crossbeam-channel  = { workspace = true }
crossterm          = { workspace = true }
dark-light         = { workspace = true }
dirs               = { workspace = true }
ratatui            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
sysinfo            = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt", "time"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
unicode-width      = { workspace = true }

# Already in the tree via sysinfo with these exact features, so the direct
# dependency adds no compile units; used for the IOKit GPU sampler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { workspace = true, features = [
  "CFBase",
  "CFDictionary",
  "CFNumber",
  "CFString",
  "std",
] }
objc2-io-kit = { workspace = true, features = ["libc", "std"] }

[dev-dependencies]
# none in Phase 1; later phases add only std + the crate's own types.
